[tool.poetry]
name = "test_framework"
version = "0.1.0"
description = "Test framework on GitHub"
authors = ["waad19 <zzee19191919@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
